--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -22,6 +22,8 @@ driver:
       ansible_connection: local
 platforms:
   - name: localhost
+    groups:
+      - etcd
 lint: |
   set -euo pipefail
   yamllint .
