--- a/molecule/suse-15/molecule.yml
+++ b/molecule/suse-15/molecule.yml
@@ -29,6 +29,8 @@ platforms:
       - "video_type = 'virtio'"
       - "volume_cache = 'writeback'"
       - "storage :file, bus: 'sata', cache: 'writeback'"
+    groups:
+      - etcd
   - name: ${MOLECULE_INSTANCE_NAME}-2
     box: generic/opensuse15
     cpu: 2
@@ -39,6 +41,8 @@ platforms:
       - "video_type = 'virtio'"
       - "volume_cache = 'writeback'"
       - "storage :file, bus: 'sata', cache: 'writeback'"
+    groups:
+      - etcd
 lint: |
   set -euo pipefail
   yamllint .
