--- a/molecule/ubuntu-20.04/molecule.yml
+++ b/molecule/ubuntu-20.04/molecule.yml
@@ -20,7 +20,7 @@ driver:
     name: libvirt
 platforms:
   - name: ${MOLECULE_INSTANCE_NAME}-1
-    box: generic/ubuntu2004
+    box: alvistack/ubuntu-20.04
     cpu: 2
     memory: 4096
     provider_raw_config_args:
@@ -32,7 +32,7 @@ platforms:
     groups:
       - etcd
   - name: ${MOLECULE_INSTANCE_NAME}-2
-    box: generic/ubuntu2004
+    box: alvistack/ubuntu-20.04
     cpu: 2
     memory: 4096
     provider_raw_config_args:
