--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,8 +79,8 @@
   loop:
     - "{{ etcd_download }}"
   when: file_result is changed
-  register: get_url_result
-  until: get_url_result is succeeded
+  register: result
+  until: result is succeeded
 
 - name: unarchive package
   shell: |
