--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -22,6 +22,7 @@
   remote_user: root
   become: true
   tasks:
-    - include_role:
+    - name: include role
+      include_role:
         name: etcd
       tags: etcd
