--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -65,22 +65,11 @@
     - { dest: "{{ etcd_peer_key_file | dirname }}" }
     - { dest: "{{ etcd_peer_trusted_ca_file | dirname }}" }
     - { dest: "{{ etcd_trusted_ca_file | dirname }}" }
-  register: file_result
+  notify:
+    - etcd | download archive
 
-- name: download archive
-  vars:
-    ansible_python_interpreter: "python3"
-  get_url:
-    url: "{{ item.url }}"
-    dest: "{{ item.dest }}"
-    checksum: "{{ item.checksum }}"
-    mode: "{{ item.mode | default('0644') }}"
-    timeout: 300
-  loop:
-    - "{{ etcd_download }}"
-  when: file_result is changed
-  register: result
-  until: result is succeeded
+- name: flush handlers
+  meta: flush_handlers
 
 - name: unarchive package
   shell: |
