Simplify download archive logic

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -59,17 +59,30 @@
     - { dest: "/usr/local/bin" }
     - { dest: "/var/lib/etcd" }
     - { dest: "{{ etcd_cert_file | dirname }}" }
-    - { dest: "{{ etcd_download.dest | dirname }}" }
     - { dest: "{{ etcd_key_file | dirname }}" }
     - { dest: "{{ etcd_peer_cert_file | dirname }}" }
     - { dest: "{{ etcd_peer_key_file | dirname }}" }
     - { dest: "{{ etcd_peer_trusted_ca_file | dirname }}" }
     - { dest: "{{ etcd_trusted_ca_file | dirname }}" }
-  notify:
-    - etcd | download archive
 
-- name: flush handlers
-  meta: flush_handlers
+- name: download archive
+  shell: |
+    set -euo pipefail
+    TMP_DIR="$(mktemp -d)" \
+      && cd $TMP_DIR \
+      && mkdir -p ./{{ item.dest | dirname }} \
+      && curl -skL -m 300 {{ item.url }} > ./{{ item.dest }} \
+      && echo -n "{{ item.sha256sum }} ./{{ item.dest }}" | sha256sum -c - \
+      && mkdir -p {{ item.dest | dirname }} \
+      && mv ./{{ item.dest }} {{ item.dest }} \
+      && rm -rf $TMP_DIR
+  args:
+    executable: "/bin/bash"
+    creates: "{{ item.dest | dirname }}"
+  loop:
+    - "{{ etcd_download }}"
+  register: result
+  until: result is succeeded
 
 - name: unarchive package
   shell: |
