--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -74,7 +74,7 @@
 
 - name: download archive
   shell: |
-    set -euo pipefail
+    set -euxo pipefail
     TMP_DIR="$(mktemp -d)" \
       && cd $TMP_DIR \
       && mkdir -p .{{ item.dest | dirname }} \
@@ -93,7 +93,7 @@
 
 - name: unarchive package
   shell: |
-    set -euo pipefail
+    set -euxo pipefail
     mkdir -p /var/log/ansible
     exec &> >(tee -a /var/log/ansible/{{ etcd_download.checksum }}.log)
     cd /usr/local/bin
@@ -338,7 +338,7 @@
 
 - name: base64 encode
   shell: |
-    set -euo pipefail
+    set -euxo pipefail
     tar zcfP - {{ _params | join(' ') }} | base64 -w 0
   vars:
     _params:
@@ -357,7 +357,7 @@
 
 - name: base64 decode
   shell: |
-    set -euo pipefail
+    set -euxo pipefail
     echo -n {{ base64_encode_result.stdout | quote }} | base64 -d | tar zx -C /
   args:
     executable: "/bin/bash"
