--- a/tasks/suse.yml
+++ b/tasks/suse.yml
@@ -13,3 +13,45 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
+- name: zypper addrepo
+  vars:
+    ansible_python_interpreter: "python3"
+  zypper_repository:
+    name: "{{ item.name }}"
+    repo: "{{ item.repo }}"
+    state: "{{ item.state }}"
+    disable_gpg_check: true
+    auto_import_keys: true
+    autorefresh: true
+  loop: "{{ _zypper_repository }}"
+  register: result
+  until: result is succeeded
+
+- name: zypper removelock
+  command: zypper removelock {{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\..*$', '\1-*') }}
+  loop: "{{ _zypper }}"
+  when: item.state == "present"
+  changed_when: false
+  failed_when: false
+
+- name: zypper install
+  vars:
+    ansible_python_interpreter: "python3"
+  zypper:
+    name: "{{ item.name }}"
+    state: "{{ item.state }}"
+    allow_vendor_change: true
+  loop: "{{ _zypper }}"
+  register: result
+  until: result is succeeded
+  notify:
+    - etcd | systemctl daemon-reload
+    - etcd | systemctl restart etcd.service
+
+- name: zypper addlock
+  command: zypper addlock {{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\..*$', '\1-*') }}
+  loop: "{{ _zypper }}"
+  when: item.state == "present"
+  changed_when: false
+  failed_when: false
