--- a/vars/ubuntu-20.04.yml
+++ b/vars/ubuntu-20.04.yml
@@ -13,3 +13,17 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
+_kube_release: "1.20"
+
+_apt_key:
+  - url: "http://download.opensuse.org/repositories/home:/alvistack/xUbuntu_20.04/Release.key"
+    id: "789CFFDE0295B8A1F4E5690C4BECC97550D0B1FD"
+    state: "present"
+
+_apt_repository:
+  - repo: "deb http://download.opensuse.org/repositories/home:/alvistack/xUbuntu_20.04 /"
+    state: "present"
+
+_apt:
+  - { state: "present", name: "etcd=100:{{ etcd_version }}*" }
