--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,7 +15,7 @@
 # limitations under the License.
 
 # etcd release.
-etcd_release: "3.5"
+etcd_release: "{{ _etcd_release }}"
 
 # etcd version.
 etcd_version: "{{ _etcd_version[etcd_release] }}"
