--- a/vars/suse-15.2.yml
+++ b/vars/suse-15.2.yml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-_kube_release: "1.20"
+_etcd_release: "3.5"
 
 _zypper_repository:
   - name: "home:alvistack"
