--- a/vars/ubuntu-20.10.yml
+++ b/vars/ubuntu-20.10.yml
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-_kube_release: "1.20"
+_etcd_release: "3.5"
 
 _apt_key:
   - url: "http://download.opensuse.org/repositories/home:/alvistack/xUbuntu_20.10/Release.key"
