--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -23,6 +23,6 @@
   become: true
   tasks:
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: etcd
       tags: etcd
