--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -24,5 +24,5 @@
   tasks:
     - name: include role
       ansible.builtin.include_role:
-        name: etcd
-      tags: etcd
+        name: alvistack.etcd
+      tags: alvistack.etcd
