--- a/molecule/rhel-9/molecule.yml
+++ b/molecule/rhel-9/molecule.yml
@@ -31,6 +31,8 @@ platforms:
       - "video_type = 'virtio'"
       - "disk_driver :cache => 'writeback'"
       - "storage :file, bus: 'virtio', cache: 'writeback'"
+    instance_raw_config_args:
+      - "vm.box_check_update = false"
     groups:
       - etcd
   - name: ${_MOLECULE_INSTANCE_NAME}-2
@@ -44,6 +46,8 @@ platforms:
       - "video_type = 'virtio'"
       - "disk_driver :cache => 'writeback'"
       - "storage :file, bus: 'virtio', cache: 'writeback'"
+    instance_raw_config_args:
+      - "vm.box_check_update = false"
     groups:
       - etcd
 lint: |
