https://github.com/ansible/ansible-lint/pull/2295

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -14,11 +14,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- hosts: all
+- name: converge | all
+  hosts: all
   remote_user: root
   become: true
-  tasks:
-- hosts: etcd
+
+- name: converge | etcd
+  hosts: etcd
   remote_user: root
   become: true
   tasks:
