--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -102,7 +102,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_privatekey:
+  community.crypto.openssl_privatekey:
     path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
@@ -114,7 +114,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_csr:
+  community.crypto.openssl_csr:
     path: "{{ etcd_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
     common_name: "{{ ansible_play_hosts[0] }}"
@@ -131,7 +131,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_certificate:
+  community.crypto.openssl_certificate:
     path: "{{ etcd_trusted_ca_file }}"
     csr_path: "{{ etcd_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_trusted_ca_file | splitext | first }}.key"
@@ -146,7 +146,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_privatekey:
+  community.crypto.openssl_privatekey:
     path: "{{ etcd_key_file }}"
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
@@ -158,7 +158,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_csr:
+  community.crypto.openssl_csr:
     path: "{{ etcd_cert_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_key_file }}"
     common_name: "{{ etcd_csr_common_name }}"
@@ -184,7 +184,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_certificate:
+  community.crypto.openssl_certificate:
     path: "{{ etcd_cert_file }}"
     csr_path: "{{ etcd_cert_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_key_file }}"
@@ -201,7 +201,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_privatekey:
+  community.crypto.openssl_privatekey:
     path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
@@ -213,7 +213,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_csr:
+  community.crypto.openssl_csr:
     path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
     common_name: "{{ ansible_play_hosts[0] }}"
@@ -230,7 +230,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_certificate:
+  community.crypto.openssl_certificate:
     path: "{{ etcd_peer_trusted_ca_file }}"
     csr_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_trusted_ca_file | splitext | first }}.key"
@@ -245,7 +245,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_privatekey:
+  community.crypto.openssl_privatekey:
     path: "{{ etcd_peer_key_file }}"
   when: inventory_hostname == ansible_play_hosts[0]
   delegate_to: "{{ ansible_play_hosts[0] }}"
@@ -257,7 +257,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_csr:
+  community.crypto.openssl_csr:
     path: "{{ etcd_peer_cert_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_key_file }}"
     common_name: "{{ etcd_peer_csr_common_name }}"
@@ -283,7 +283,7 @@
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   vars:
     ansible_python_interpreter: "python3"
-  openssl_certificate:
+  community.crypto.openssl_certificate:
     path: "{{ etcd_peer_cert_file }}"
     csr_path: "{{ etcd_peer_cert_file | splitext | first }}.csr"
     privatekey_path: "{{ etcd_peer_key_file }}"
