--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -21,9 +21,10 @@
   failed_when: false
 
 - name: etcd | rm -rf {{ etcd_data_dir }}
-  ansible.builtin.shell: |
-    set -euxo pipefail
-    rm -rf {{ etcd_data_dir }}
+  ansible.builtin.shell:
+    cmd: |
+      set -euxo pipefail
+      rm -rf {{ etcd_data_dir }}
   args:
     executable: "/bin/bash"
   loop: "{{ ansible_play_hosts }}"
