--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -92,6 +92,10 @@ etcd_trusted_ca_file: "/etc/etcd/pki/ca.crt"
 # Client TLS using generated certificates.
 etcd_auto_tls: false
 
+# Comma-separated list of supported TLS cipher suites between
+# client/server and peers (empty will be auto-populated by Go).
+etcd_cipher_suites: "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384"
+
 # Path to the peer server TLS cert file.
 etcd_peer_cert_file: "/etc/etcd/pki/peer.crt"
 
